[package]
name = "long-running-task"
authors = ["Thomas Zahner <thomas.zahner@protonmail.ch>"]
description = "Handle long-running tasks for your RESTful HTTP API"
keywords = ["web", "rest", "restful", "http"]
readme = "README.md"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
lifespan = []
serde = ["dep:serde"]
