[package]
name = "rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
long-running-task = { path = "../..", features = ["serde"] }
rocket = { version = "0.5.0", features = ["json", "uuid"] }
tokio = "1.35.1"
